--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <label for="user_superpowers">Пользователи-способности</label>
     </div>
  
-    <button type="submit">Получить данные</button>
+    <button name="submit" type="submit">Получить данные</button>
 </form>
 <br/>
     <footer>
